fixed FilesSorter